--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,7 +20,7 @@
             "label": "package",
             "type": "shell",
             "command": "C:\\Program Files (x86)\\NSIS\\makensis.exe",
-            "args": ["/INPUTCHARSET", "UTF8", "/DPRODUCT_VERSION=pre-release","package\\MDF.nsi"],
+            "args": ["/INPUTCHARSET", "UTF8", "/DPRODUCT_VERSION=Pre-release", "/DPRODUCT_NAME=MDF-OSS", "/DEXE_NAME=MDF-OSS.exe", "package\\MDF.nsi"],
             "options": {
                 "cwd": "${workspaceFolder}"
             },
