--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,10 @@ version-beta:
 version-stable:
   image: python:latest
   stage: version
+  before_script:
+    - git clone $Env:GIT_URL
+    - mv mdf-resources\resources\LICENSE public\
+    - mv mdf-resources\resources\OpenSourceLicense.txt public\
   script:
     - python package/vc.py -r
   artifacts:
